@@ -41,11 +41,10 @@ lnk_file,
 chr_file,
 blk_file,
 sock_file,
-fifo_file,
-all_files
+fifo_file
 .SH AUTHOR
 This manual page was written by Kevin Carr <kcarr@tresys.com>.  
 .SH COPYRIGHT
 Copyright(C) 2006 Tresys Technology, LLC
 .SH SEE ALSO
-findcon(1), replcon(1), searchcon(1), indexcon(1)
+findcon(1), replcon(1), indexcon(1)
