@@ -1,17 +1,17 @@
 /* Copyright (C) 2004-2006 Tresys Technology, LLC
  * see file 'COPYING' for use and warranty information */
 
-/* 
+/*
  * Author: Don Patterson <don.patterson@tresys.com>
  * Date: 8-17-2004
  */
 
 /* seaudit-report: command line tool for processing SELinux audit logs and
- * generating a concise report containing standard information as well as 
+ * generating a concise report containing standard information as well as
  * customized information using seaudit views. Reports are rendered in either
- * HTML or plain text. Future support will provide rendering into XML. The 
+ * HTML or plain text. Future support will provide rendering into XML. The
  * HTML report can be formatted by providing an alternate stylesheet file
- * or by configuring the default stylesheet. This tool also provides the 
+ * or by configuring the default stylesheet. This tool also provides the
  * option for including malformed strings within the report.
  */
 
@@ -24,11 +24,6 @@
 #include <getopt.h>
 
 #include <libxml/xmlreader.h>
-
-/* SEREPORT_VERSION_NUM should be defined in the make environment */
-#ifndef VERSION
-#define VERSION "UNKNOWN"
-#endif
 
 #define COPYRIGHT_INFO "Copyright (C) 2004-2006 Tresys Technology, LLC"
 
@@ -53,19 +48,17 @@ void seaudit_report_info_usage(const char *program_name, bool_t brief)
 		printf("\n   Try %s --help for more help.\n\n", program_name);
 		return;
 	}
-	printf("  -s,  --stdin          	Read LOGFILES from standard input.\n");
-	printf("  -m,  --malformed     		Include malformed log messages.\n");
-	printf("  -o <file>, --output <file>  	Output to file.\n");
-	printf("  -c <file>, --config <file>	Use alternate config file.\n");
-	printf("  --html          		Set the output to format to HTML. Plain text is the default.\n");
-	printf("  --stylesheet <file>		HTML stylesheet to be used for formatting an HTML report.\n");
-	printf("  				This option is only used if --html option is also provided.\n");
-	printf("				See %s/%s for example of stylesheet source to use.\n", APOL_INSTALL_DIR, STYLESHEET_FILE);
-	printf("  -v,  --version        	Display version information and exit.\n");
-	printf("  -h,  --help           	Display this help and exit.\n");
+	printf("  -s, --stdin              Read LOGFILES from standard input.\n");
+	printf("  -m, --malformed          Include malformed log messages.\n");
+	printf("  -oFILE, --output=FILE    Output to file.\n");
+	printf("  -cFILE, --config=FILE    Use alternate config file.\n");
+	printf("  --html                   Set output format to HTML.  Default is plain text.\n");
+	printf("  --stylesheet=FILE        HTML stylesheet for formatting HTML report.\n");
+	printf("                           (Ignored if --html is not given.)\n");
+	printf("  -v, --version            Display version information and exit.\n");
+	printf("  -h, --help               Display this help and exit.\n");
 	printf("\n");
-	
-	return;
+	printf("Example stylesheet is at %s/%s.\n", APOL_INSTALL_DIR, STYLESHEET_FILE);
 }
 
 static void seaudit_report_parse_command_line_args(int argc, char **argv, seaudit_report_t *report_info) {
@@ -80,30 +73,30 @@ static void seaudit_report_parse_command_line_args(int argc, char **argv, seaudi
 		case 'o':
 			/* File to save output to */
 			if (optarg != 0) {
-	  			if (seaudit_report_add_outFile_path(optarg, report_info) != 0)
-	  				goto err;
-	  		}
+				if (seaudit_report_add_outFile_path(optarg, report_info) != 0)
+					goto err;
+			}
 			break;
 		case 'c':
-			/* Alternate config file path */ 
+			/* Alternate config file path */
 			if (optarg != 0) {
-	  			if (seaudit_report_add_configFile_path(optarg, report_info) != 0)
-	  				goto err;
-	  		}
+				if (seaudit_report_add_configFile_path(optarg, report_info) != 0)
+					goto err;
+			}
 			break;
 		case 'S':
-			/* HTML style sheet file path */ 
+			/* HTML style sheet file path */
 			if (optarg != 0) {
-	  			if (seaudit_report_add_stylesheet_path(optarg, report_info) != 0)
-	  				goto err;
-	  		}
-	  		report_info->use_stylesheet = TRUE;
+				if (seaudit_report_add_stylesheet_path(optarg, report_info) != 0)
+					goto err;
+			}
+			report_info->use_stylesheet = TRUE;
 			break;
 		case 'm':
-			/* include malformed messages */	
+			/* include malformed messages */
 			report_info->malformed = TRUE;
 			break;
-		case 's':	
+		case 's':
 			/* read LOGFILES from standard input */
 			report_info->stdin = TRUE;
 			break;
@@ -111,30 +104,30 @@ static void seaudit_report_parse_command_line_args(int argc, char **argv, seaudi
 			/* Set the output to format to html */
 			report_info->html = TRUE;
 			break;
-		case 'v':	
+		case 'v':
 			/* display version */
 			printf("\n%s (seaudit-report ver. %s)\n\n", COPYRIGHT_INFO,
-       					VERSION);
+					VERSION);
 			seaudit_report_destroy(report_info);
 			exit(0);
-		case 'h':	
+		case 'h':
 			/* display help */
 			seaudit_report_info_usage(argv[0], FALSE);
 			seaudit_report_destroy(report_info);
 			exit(0);
-		default:	
+		default:
 			/* display usage and handle error */
 			seaudit_report_info_usage(argv[0], TRUE);
 			goto err;
 		}
 	}
-	
+
 	/* Throw warning if a stylesheet was specified, but the --html option was not. */
 	if (report_info->stylesheet_file != NULL && !report_info->html) {
 		fprintf(stderr, "Warning: The --html option was not specified.\n");
 		goto err;
-	} 
-		
+	}
+
 	/* Add required filenames */
 	for (i = (argc - 1); i >= optind; i--) {
 		if (seaudit_report_add_logfile_to_list(report_info, argv[i])) {
@@ -142,19 +135,19 @@ static void seaudit_report_parse_command_line_args(int argc, char **argv, seaudi
 			goto err;
 		}
 	}
-	
+
 	/* Ensure that logfiles were not specified in addition to the standard-in option */
 	if ((report_info->num_logfiles > 0) && report_info->stdin) {
 		fprintf(stderr,
 			"Warning: Command line filename(s) will be ignored. Reading from stdin.\n");
 	}
-	
+
 	if ((!report_info->stdin) && (report_info->num_logfiles == 0 || (argc == optind))) {
 		/* display usage and handle error */
 		seaudit_report_info_usage(argv[0], TRUE);
 		goto err;
 	}
-	
+
 	return;
 
 err:
@@ -163,24 +156,24 @@ err:
 }
 
 int main (int argc, char **argv)
-{	
+{
 	seaudit_report_t *report_info;
-	
+
 	report_info = seaudit_report_create();
 	if (!report_info) {
 		return -1;
 	}
 	seaudit_report_parse_command_line_args(argc, argv, report_info);
-	
+
 	/* Load all audit messages into memory */
 	if (seaudit_report_load_audit_messages_from_log_file(report_info) != 0)
-		return -1;	
-		
+		return -1;
+
 	if (seaudit_report_generate_report(report_info) != 0) {
 		seaudit_report_destroy(report_info);
 		return -1;
 	}
 	seaudit_report_destroy(report_info);
-	
+
 	return 0;
 }
